refactor: ContractForm 改用 platformInstanceId 关联，instanceId=0 时返回提示
- domain-ontology.yaml: Contract→ContractForm 关系 via 改为 platformInstanceId→instanceId
- ContractFormGateway: 直接接收引擎传入的 instanceId，移除 ContractDao 依赖
  - instanceId 为 0 时返回"合同未生成，无法查询对应协议平台版式信息"
  - 其他情况直接调用 contract-form-data HTTP 接口

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>