@@ -2,7 +2,6 @@ package com.yycome.sremate.domain.ontology.gateway;
 
 import com.yycome.sremate.domain.ontology.engine.EntityDataGateway;
 import com.yycome.sremate.domain.ontology.engine.EntityGatewayRegistry;
-import com.yycome.sremate.infrastructure.dao.ContractDao;
 import com.yycome.sremate.trigger.agent.HttpEndpointTool;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
@@ -13,16 +12,14 @@ import java.util.*;
 
 /**
  * Contract 版式数据网关（本体论版）
- * 查询流程：
- * 1. 根据 contractCode 查询 platformInstanceId
- * 2. 调用 contract-form-data HTTP 接口获取 form_id
+ * 引擎从 Contract 记录中取 platformInstanceId，直接传入 queryByField。
+ * instanceId 为 0 时表示合同尚未生成，直接返回提示信息。
  */
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class ContractFormGateway implements EntityDataGateway {
 
-    private final ContractDao contractDao;
     private final HttpEndpointTool httpEndpointTool;
     private final EntityGatewayRegistry registry;
 
@@ -40,33 +37,26 @@ public class ContractFormGateway implements EntityDataGateway {
     public List<Map<String, Object>> queryByField(String fieldName, Object value) {
         log.debug("[ContractFormGateway] queryByField: {} = {}", fieldName, value);
 
-        if (!"contractCode".equals(fieldName)) {
-            return Collections.emptyList();
+        String instanceId = String.valueOf(value);
+
+        // instanceId 为 0 表示合同尚未在协议平台生成，无版式数据
+        if ("0".equals(instanceId) || "null".equals(instanceId)) {
+            Map<String, Object> result = new LinkedHashMap<>();
+            result.put("instanceId", instanceId);
+            result.put("message", "合同未生成，无法查询对应协议平台版式信息");
+            return List.of(result);
         }
 
-        String contractCode = String.valueOf(value);
-
-        // Step 1: 查询 platformInstanceId
-        Long instanceId = contractDao.findPlatformInstanceId(contractCode);
-        if (instanceId == null) {
-            log.warn("[ContractFormGateway] 未找到 platformInstanceId, contractCode={}", contractCode);
-            return Collections.emptyList();
-        }
-
-        // Step 2: 调用 HTTP 接口获取 form_id
         try {
             String formData = httpEndpointTool.callPredefinedEndpoint("contract-form-data",
-                    Map.of("instanceId", instanceId.toString()));
+                    Map.of("instanceId", instanceId));
 
-            // 解析并构建结果
             Map<String, Object> result = new LinkedHashMap<>();
-            result.put("contractCode", contractCode);
-            result.put("platformInstanceId", instanceId);
+            result.put("instanceId", instanceId);
             result.put("formData", formData);
-
             return List.of(result);
         } catch (Exception e) {
-            log.warn("[ContractFormGateway] 查询版式失败 contractCode={}: {}", contractCode, e.getMessage());
+            log.warn("[ContractFormGateway] 查询版式失败 instanceId={}: {}", instanceId, e.getMessage());
             return Collections.emptyList();
         }
     }
